added 3 new case-file apis
